--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,26 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://ircareers.referrals.selectminds.com/jobs/intern-quality-engineering-hastings-ne-38047'>Intern - Quality Engineering (Hastings, NE) - Ingersoll Rand Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/romaxtechnology/job/oQurbfwG'>Romax Technology Limited Careers - Marketing Communications Intern</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://liqid.join.com/jobs/462364-intern-investment-analyst-m-w-d'>Job @ LIQID Investments (Berlin): Intern Investmen... | JOIN</a></h5> 
+<p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://liqid.join.com/jobs/450270-intern-quantitative-analyst-m-w-d'>Job @ LIQID Investments (Berlin): Intern Quantitat... | JOIN</a></h5> 
+<p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://liqid.join.com/jobs/451596-intern-business-development-m-w-d'>Job @ LIQID Investments (Berlin): Intern Business ... | JOIN</a></h5> 
+<p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qWGaVfwr&k=Job&j=oVqvafwK&__jvst=Employee+Referral&__jvsd=sIlFeiwJ&__jvsc=Twitter&bid=nMTRqMwd'>Selina Careers - Internship Opportunity Sales- Associate Market Management (Casco Viejo, Panama City, Panama)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
@@ -79,7 +99,7 @@
 <p><span class="badge badge-light">United States Canada United States Canada</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/koddi/ae44e4ca-6140-4627-af14-37b666d1024a'>Koddi - Data Analyst Internship</a></h5> 
+<h5><a href='https://jobs.lever.co/koddi/ae44e4ca-6140-4627-af14-37b666d1024a'>Koddi - Data Analyst Internship</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -105,11 +125,11 @@
 <p><span class="badge badge-light">Los Angeles  Los Angeles  Los Angeles  Los Angeles Berlin</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/studio71us/86052e08-da19-4152-94c8-d06d1beab097'>Studio71 - Gaming, Talent Partnerships Internship Winter 2020 - Los Angeles</a></h5> 
+<h5><a href='https://jobs.lever.co/studio71us/86052e08-da19-4152-94c8-d06d1beab097'>Studio71 - Gaming, Talent Partnerships Internship Winter 2020 - Los Angeles</a></h5> 
 <p><span class="badge badge-light">Los Angeles  Los Angeles  Los Angeles  Los Angeles</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/studio71us/89bfdcfa-1e14-4b71-870a-1a63cf28acdd'>Studio71 - Media Sales Internship Winter 2020 - New York City</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/studio71us/89bfdcfa-1e14-4b71-870a-1a63cf28acdd'>Studio71 - Media Sales Internship Winter 2020 - New York City</a></h5> 
 <p><span class="badge badge-light">New York City  New York City  New York  Los Angeles Berlin New York Toronto</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -145,7 +165,7 @@
 <p><span class="badge badge-light">Los Angeles  Los Angeles  Los Angeles  Los Angeles Berlin</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/studio71us/e7d63cc5-91c6-41f3-80d3-dd19bc2dd910'>Studio71 - Talent Partnerships Winter 2020 Internship - Los Angeles</a></h5> 
+<h5><a href='https://jobs.lever.co/studio71us/e7d63cc5-91c6-41f3-80d3-dd19bc2dd910'>Studio71 - Talent Partnerships Winter 2020 Internship - Los Angeles</a></h5> 
 <p><span class="badge badge-light">Los Angeles  Los Angeles  Los Angeles  Los Angeles Berlin New York</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -161,7 +181,7 @@
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://phs.zohorecruit.eu/recruit/ViewJob.na?digest=se1araPpXNe0qwuf@nk7FkIcFDfd5JX.t4.Z4AFeKfc-&embedsource=CareerSite'>INTERN PHARMACIST</a></h5> 
+<h5><a href='https://phs.zohorecruit.eu/recruit/ViewJob.na?digest=se1araPpXNe0qwuf@nk7FkIcFDfd5JX.t4.Z4AFeKfc-&embedsource=CareerSite'>INTERN PHARMACIST</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -187,7 +207,7 @@
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bandwidth/jobs/1933234'>Job Application for Software Development Intern - Keystone (Authentication Services) at Bandwidth</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bandwidth/jobs/1933234'>Job Application for Software Development Intern - Keystone (Authentication Services) at Bandwidth</a></h5> 
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -215,7 +235,7 @@
 <p><span class="badge badge-light">Brooklyn, NY New York  Brooklyn, NY New York</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/vmlyr/job/objqbfwP'>VMLY&R Careers - Intern - Finance</a></h5> 
+<h5><a href='https://jobs.jobvite.com/vmlyr/job/objqbfwP'>VMLY&R Careers - Intern - Finance</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -235,7 +255,7 @@
 <p><span class="badge badge-light">San Francisco  San Francisco</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/double-negative-visual-effects/job/o9psbfwV'>DNEG Careers - Resource Manager - Gestionnaires des ressources internes</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/double-negative-visual-effects/job/o9psbfwV'>DNEG Careers - Resource Manager - Gestionnaires des ressources internes</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -251,7 +271,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wtw.referrals.selectminds.com/jobs/intern-client-relationship-management-12063'>Intern - Client Relationship Management - Willis Towers Watson Careers</a></h5> 
+<h5><a href='https://wtw.referrals.selectminds.com/jobs/intern-client-relationship-management-12063'>Intern - Client Relationship Management - Willis Towers Watson Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -259,7 +279,7 @@
 <p><span class="badge badge-light">San Francisco San Francisco</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/linkedin/job/o56pbfwv'>LinkedIn Careers - MBA Intern, Corporate Development</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/linkedin/job/o56pbfwv'>LinkedIn Careers - MBA Intern, Corporate Development</a></h5> 
 <p><span class="badge badge-light">San Francisco, California  San Francisco</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -387,7 +407,7 @@
 <p><span class="badge badge-light">Dubai</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://startupsesame.join.com/jobs/474556-event-analyst-intern'>Job @ Startup Sesame (Paris): Event Analyst Intern | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://startupsesame.join.com/jobs/474556-event-analyst-intern'>Job @ Startup Sesame (Paris): Event Analyst Intern | JOIN</a></h5> 
 <p><span class="badge badge-light">Paris Paris, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -434,26 +454,6 @@ parallel computing? If so, we want to hear from you. NVIDIA is committed to?...<
 <hr/>
 <h5><a href='https://boards.greenhouse.io/github/jobs/1933902'>Job Application for Software Engineering Intern - GitHub Actions  at GitHub</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://punchh.com/careers/from-intern-to-employee-how-i-found-my-full-time-fit/'>From Intern to Employee: How I Found My Full-Time Fit - Punchh</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=ojK89fw4&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=nW4hqMwY'>Palo Alto Networks Careers - Intern - Cortex Data Lake Software Engineer</a></h5> 
-<p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
-<p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qEAaVfw3&k=Job&j=oh4Safw7&__jvst=Employee&__jvsd=sIa4whwe&__jvsc=Twitter&bid=n6CgqMwF'>Paid Internship - PHP/MySQL Full-Stack Software Developer | Dominion Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/popsockets/jobs/4485791002'>Job Application for Brand Ambassador Intern at PopSockets</a></h5> 
-<p><span class="badge badge-light">Boulder  Boulder</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://ibxhome.referrals.selectminds.com/jobs/phmc-patient-centered-medical-home-care-management-team-clinical-nurse-intern-2647'>PHMC - Patient Centered Medical Home Care Management Team - Clinical Nurse Intern - Independence Blue Cross Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 
